# signal-forge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.beads/: config.yaml  metadata.json
schema/: signal-forge.concept.schema
src/: lib.rs
